Refactor CSS for improved readability and responsiveness

--- a/style_g/main.css
+++ b/style_g/main.css
@@ -1,19 +1,26 @@
 @charset "UTF-8";
+
 * {
   scroll-behavior: smooth;
 
   /*box-shadow: 0 0 0 3px red inset;*/
-  
+
 }
 
 
 
-body{margin:0; }/*background-color: rgb(236, 236, 255);*/
+body {
+  margin: 0;
+}
 
-#background{
+/*background-color: rgb(236, 236, 255);*/
+
+#background {
   margin: auto;
   max-width: 3000px;
-  background-image: none;/*background-color: #06283D; *//*rgb(236, 236, 255)*/
+  background-image: none;
+  /*background-color: #06283D; */
+  /*rgb(236, 236, 255)*/
   background-size: cover;
   display: block;
   box-sizing: border-box;
@@ -21,14 +28,14 @@ body{margin:0; }/*background-color: rgb(236, 236, 255);*/
   min-height: 980px;
   padding-top: 75px;
   /*filter: blur(0.9px);*/
-  transition: background-image 2s ease-in; 
+  transition: background-image 2s ease-in;
 }
 
 
 
 
 
-.deb{
+.deb {
   background: none;
   position: absolute;
   top: 0px;
@@ -37,7 +44,8 @@ body{margin:0; }/*background-color: rgb(236, 236, 255);*/
   box-sizing: border-box;
 
   min-height: 980px;
-  padding-top: 75px;}
+  padding-top: 75px;
+}
 
 
 
@@ -45,10 +53,11 @@ body{margin:0; }/*background-color: rgb(236, 236, 255);*/
 
 
 
-.menu,.result{
+.menu,
+.result {
   width: 50%;
   max-width: 2000px;
-  margin:0px auto;
+  margin: 0px auto;
 }
 
 
@@ -58,46 +67,53 @@ body{margin:0; }/*background-color: rgb(236, 236, 255);*/
 
 }
 
-.menu, .result {
+.menu,
+.result {
   color: black;
   background: rgba(255, 228, 196, 0.3);
-  backdrop-filter: blur(10px); 
+  backdrop-filter: blur(10px);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 
-.menu>h1{
+.menu>h1 {
   text-align: center;
-  font-family: 'Marianne', sans-serif;}
+  font-family: 'Marianne', sans-serif;
+}
 
 
-#afficheLen{
-  font-family:gibson-regular,Arial,sans-serif;
+#afficheLen {
+  font-family: gibson-regular, Arial, sans-serif;
   padding-bottom: 40px;
 }
 
-#output{
+#output {
   font-weight: bold;
 }
 
-.input_checkbox{
-  margin-left: 45%;}
+.input_checkbox {
+  margin-left: 45%;
+}
 
 
-.c{
-    width: 34px; /* Largeur de la case à cocher */
-    height: 24px; /* Hauteur de la case à cocher */
-    margin-right: 8px;
-    margin-bottom: 10px;
-    
-   accent-color: red; }
+.c {
+  width: 34px;
+  /* Largeur de la case à cocher */
+  height: 24px;
+  /* Hauteur de la case à cocher */
+  margin-right: 8px;
+  margin-bottom: 10px;
+
+  accent-color: red;
+}
 
 label {
   color: RGB(58, 58, 58);
-  font-family: "Roboto", sans-serif; 
+  font-family: "Roboto", sans-serif;
   font-size: 22px;
   user-select: none;
-  }
+}
+
 /*
   label:hover::after {
     content: "Hello World";
@@ -116,13 +132,17 @@ label {
 
 
 
-.barre{
-    width: 60%;
-    margin-left: 20%;
-    accent-color: red;}
+.barre {
+  width: 60%;
+  margin-left: 20%;
+  accent-color: red;
+}
 
 
-#afficheLen { text-align: center;font-size: 19px;}
+#afficheLen {
+  text-align: center;
+  font-size: 19px;
+}
 
 
 
@@ -134,9 +154,9 @@ label {
 
 
 .actu-button-container {
-    position: relative;
-    text-align: right;
-  }
+  position: relative;
+  text-align: right;
+}
 
 
 .actu-button {
@@ -144,74 +164,99 @@ label {
   float: right;
   margin-top: 1.5px;
   text-align: right;
-    margin-right: 4.5%;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;}
-  
-.actu-logo {
-  
-    top: 40px;
-    height: 40px;
-    width: 40px;
-    }
-
-.actu-button:hover .actu-logo {
-    
-  transition: 0.4s;
-  transform: rotate(360deg);}
-
-
-
-
-.result{
-        margin-top: 40px;
-        margin-bottom: 50px;
-        border-radius:0px 0px  25px 25px ;
-        color: black;
-   
-        padding-top: 10px;
-        padding-bottom: 7px;
+  margin-right: 4.5%;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
-#password{font-family:gibson-regular,Arial,sans-serif;font-family:"Space Mono", monospace ;font-size: 29px;height: 45px;}
+.actu-logo {
+
+  top: 40px;
+  height: 40px;
+  width: 40px;
+}
+
+.actu-button:hover .actu-logo {
+
+  transition: 0.4s;
+  transform: rotate(360deg);
+}
+
+
+
+
+.result {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  border-radius: 0px 0px 25px 25px;
+  color: black;
+
+  padding-top: 10px;
+  padding-bottom: 7px;
+}
+
 #password {
-            margin-left: 6.5%;
-            margin-right: 5%;
-    
-            border: 1px solid gray;
-            border-radius: 10px;
-            width: 60%;
-            max-width: 999px;
-            height: 40px;
-            overflow: hidden;
-            display: inline-block;
-            word-wrap: break-all;
-            overflow-wrap:break-word;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            padding-left: 1%;
-       
-          }
-.contBadge{margin: 0;padding: 0;width: 5px;background-color: #1ECD97; white-space: nowrap;position: relative;
-  margin-left: -5%;margin-top: -10px;
-  display: inline-block;}
-#badge{background-color: blueviolet;
-        color: white;
-        padding: 6px  15px 6px 15px;
-        margin-left: -5%;
+  font-family: gibson-regular, Arial, sans-serif;
+  font-family: "Space Mono", monospace;
+  font-size: 29px;
+  height: 45px;
+}
 
-        border-radius: 10px;
-        font-size: 25px;
-        font-family: "MierB03", "Helvetica", "Arial", sans-serif;
-        text-transform: uppercase;
-        position: relative; top: 1.5px;
-        white-space: nowrap;
-      
-        display: inline-block;
-        vertical-align: top;} 
+#password {
+  margin-left: 6.5%;
+  margin-right: 5%;
 
-#ligne{margin-left: 3%;margin-bottom: 10px; margin-right: 3%;}
+  border: 1px solid gray;
+  border-radius: 10px;
+  width: 60%;
+  max-width: 999px;
+  height: 40px;
+  overflow: hidden;
+  display: inline-block;
+  word-wrap: break-all;
+  overflow-wrap: break-word;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding-left: 1%;
+
+}
+
+.contBadge {
+  margin: 0;
+  padding: 0;
+  width: 5px;
+  background-color: #1ECD97;
+  white-space: nowrap;
+  position: relative;
+  margin-left: -5%;
+  margin-top: -10px;
+  display: inline-block;
+}
+
+#badge {
+  background-color: blueviolet;
+  color: white;
+  padding: 6px 15px 6px 15px;
+  margin-left: -5%;
+
+  border-radius: 10px;
+  font-size: 25px;
+  font-family: "MierB03", "Helvetica", "Arial", sans-serif;
+  text-transform: uppercase;
+  position: relative;
+  top: 1.5px;
+  white-space: nowrap;
+
+  display: inline-block;
+  vertical-align: top;
+}
+
+#ligne {
+  margin-left: 3%;
+  margin-bottom: 10px;
+  margin-right: 3%;
+}
 
 
 
@@ -224,7 +269,8 @@ label {
 }
 
 
-.faq{background-color: #F8F9FA;
+.faq {
+  background-color: #F8F9FA;
   display: block;
   box-sizing: border-box;
   width: 100%;
@@ -236,7 +282,8 @@ label {
 }
 
 
-.faq>h1{text-align: center;
+.faq>h1 {
+  text-align: center;
   width: 50%;
   min-width: 200px;
   font-family: 'Marianne', sans-serif, monospace;
@@ -252,7 +299,7 @@ label {
 
 
 
-details{
+details {
   margin: auto;
   width: 70%;
   max-width: 900px;
@@ -266,7 +313,7 @@ details{
 
 }
 
-summary{
+summary {
   user-select: none;
   width: 100%;
   height: auto;
@@ -283,40 +330,47 @@ summary{
 
 
 
-summary h4{
+summary h4 {
   margin-left: 10px;
   max-width: 84%;
-    padding: 0px 5px;
-    font-size: 25px;
- 
+  padding: 0px 5px;
+  font-size: 25px;
+
   font-family: Arial, Helvetica, sans-serif;
- }
+}
 
 
 
 
 
-details>p{
+details>p {
   font-size: 20px;
   width: 90%;
   text-align: justify;
   font-family: Arial, Helvetica, sans-serif;
   padding-left: 15px;
   padding-bottom: 10px;
-  padding-right: 7%;}        
+  padding-right: 7%;
+}
 
 
-details>ol, details>ul {
+details>ol,
+details>ul {
 
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   width: 90%;
 }
-details>ol li{
-  text-align: justify;
-  padding: 5px;}
 
-summary:hover, details[open] summary{color: #0070f6;}
+details>ol li {
+  text-align: justify;
+  padding: 5px;
+}
+
+summary:hover,
+details[open] summary {
+  color: #0070f6;
+}
 
 
 .logo_plus {
@@ -331,28 +385,32 @@ summary:hover, details[open] summary{color: #0070f6;}
   position: relative;
   float: right;
   margin: 10px;
-  
+
   cursor: pointer;
-  
-  }
+
+}
 
 
-.logo_plus > span {
+.logo_plus>span {
   color: black;
   font-size: 39px;
   font-family: 'Times New Roman', Times, serif;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);}
+  transform: translate(-50%, -50%);
+}
 
 summary:hover .logo_plus {
   border: 1px solid #0070f6;
-  background-color: #0070f6;}
+  background-color: #0070f6;
+}
 
 
-summary:hover .logo_plus > span , details[open] .logo_plus > span{
-  color: white;}
+summary:hover .logo_plus>span,
+details[open] .logo_plus>span {
+  color: white;
+}
 
 
 
@@ -382,29 +440,27 @@ details[open] .logo_plus {
 
 
 
-footer{
+footer {
   position: relative;
   margin-top: 220px;
   width: 100%;
 
   border-radius: 50px;
   text-align: center;
-  
+
   display: block;
   font-size: 25px;
 }
 
-footer a:hover{
+footer a:hover {
   background-color: #1ECD97;
   color: white;
 }
 
-footer a{
+footer a {
   text-decoration: none;
   padding: 10px 20px 10px 20px;
-  
+
   border-radius: 50px;
-  background-color: white; 
+  background-color: white;
 }
-
-
